Create the basic website for the course
Signed-off-by: Kai Gao <emiapwil@gmail.com>

--- a/index.html
+++ b/index.html
@@ -1,5 +1,48 @@
 ---
 layout: default
+
+people:
+- name: 王启旭
+  pic: wangqixu.png
+  position: 任课教师
+  bio: 2017年毕业于电子科技大学计算机科学与技术专业，博士学位，现任四川大学网络空间安全学院助理研究员。
+  classid: 01
+  email: qixuwang@scu.edu.cn
+
+- name: 高凯
+  pic: gaokai.png
+  position: 任课教师
+  bio: 2019年毕业于清华大学计算机科学与技术专业，博士学位。现任四川大学网络空间安全学院助理研究员。
+  classid: 02
+  email: kaigao@scu.edu.cn
+
+- name: 李贝贝
+  pic: libeibei.png
+  position: 任课教师
+  bio: 2019年毕业于新加坡南洋理工大学网络空间安全专业，博士学位。现任四川大学网络空间安全学院特聘副研究员。
+  classid: 03
+  email: libeibei@scu.edu.cn
+
+- name: 汪邓喆
+  pic: wangdengzhe.png
+  position: 助教
+  bio: 四川大学网络空间安全学院网络空间安全专业2016级本科生
+  classid: 01
+  email: 2078177077@qq.com
+
+- name: 章蕾
+  pic:
+  position: 助教
+  bio: 四川大学网络空间安全学院计算机技术专业2019级硕士研究生
+  classid: 02
+  email: zhanglei66a@qq.com
+
+- name: 宋涵
+  pic: songhan.png
+  position: 助教
+  bio: 四川大学网络空间安全学院计算机技术专业2019级硕士研究生
+  classid: 03
+  email: songhan@stu.scu.edu.cn
 ---
 
 <div class="home">
