--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ people:
   email: 2078177077@qq.com
 
 - name: 章蕾
-  pic:
+  pic: zhanglei.png
   position: 助教
   bio: 四川大学网络空间安全学院计算机技术专业2019级硕士研究生
   classid: 02
